2007-01-01  Pace Willisson  <pace@rhino.pacew.com>
	* V11

	* fix display in VAB; some other helper programs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-01  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V11
+	
+	* fix display in VAB; some other helper programs
+
 	* V10
 	
 	* more pathname details
