2007-01-01  Pace Willisson  <pace@rhino.pacew.com>
	* V14

	* add audio to mission playback

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-01  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V14
+	
+	* add audio to mission playback
+
 	* V13
 	
 	* make mission display work; fix up inter-frame delays in video;
