--- a/TODO
+++ b/TODO
@@ -1,4 +1,14 @@
 clean up extra gr_sync's
 remove uses of libopus
-put in credits, copyright notices
+make credits, copyright notices work
+fades
+evaluate all remaining unimp's
+BzTimer
+water sparkling
+flag waving
+small screens in mission control during launch
+check out passing helicopters
+check out vab animations
+
+
 
