--- a/TODO
+++ b/TODO
@@ -9,6 +9,6 @@ flag waving
 small screens in mission control during launch
 check out passing helicopters
 check out vab animations
-
+enable all gcc warnings and fix up code
 
 
