2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
	* V20

	* remove deadwood

--- a/TODO
+++ b/TODO
@@ -10,5 +10,7 @@ small screens in mission control during launch
 check out passing helicopters
 check out vab animations
 enable all gcc warnings and fix up code
-
-
+check with valgrind
+compile with -O
+why am I not seeing any mission failures?
+optimize grPutPixel and grGetPixel
