*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
+
+	* V24
+
+	* I messed up trying to apply tag V23 to Michael's changes.
+	This check just puts V24 on the current files.
+
 2007-01-02  Michael McCarty <mkmccarty@gmail.com>
 
 	* V23
