--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V26
+
+	* another block of unused locals
+
 	* V25
 	
 	* remove more unused locals
