--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V32
+
+	* enable gcc warning related to structured initializers
+
 	* V31
 	
 	* enable gcc warning about comparing signed and unsigned values
