2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
	* V37

	* allow videos to be skipped when viewing missions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V37
+
+	* allow videos to be skipped when viewing missions
+
 	* V36
 	
 	* make little screens work during launch
