2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
	* V38

	* rpm file generation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V38
+
+	* rpm file generation
+
 	* V37
 
 	* allow videos to be skipped when viewing missions
