2007-01-02  Michael McCarty <mkmccarty@gmail.com>
	* V39

	* fixed some unitialized values

	* replaced calls to kill() with remove_savedat()

2007-01-02  Pace Willisson  <pace@rhino.pacew.com>

	* V38

	* rpm file generation

	* V37

	* allow videos to be skipped when viewing missions

	* V36

	* make little screens work during launch

	* V35

	* remove stubs that are no longer needed (now unimp() is gone);
	remove modem and play by mail stuff until everything else works

	* V34

	* hack around messed up crane image (search for fixing sImg) in
	port.c

	* V33

	* fix some NULL pointer problems in mc.c and prest.c

	* V32

	* enable gcc warning related to structured initializers

	* V31

	* enable gcc warning about comparing signed and unsigned values

	* V30

	* enable gcc check for use of uninitialized local
	variable - put in lots of comments like this:

	 spc[0] = 0; /* XXX check uninitialized */

	 Some of these are real bugs, where there was no way to initialize
	the variable before it was used.  In other cases, the code path
	that gcc found to an uninitialized use may be impossible to
	traverse given other data constraints.  Future project:
	look for all these comments and either fix any bugs present,
	or remove the comment if the code is ok.

	* V29

	* add extra braces and parens so gcc's Wparentheses warning
	will be useful.  I compiled the program before and after
	these changes with no difference in the .o files, so the
	explicit groups is now what the compiler has done all along.
	there were two paces in future.c, marked with XXX, where
	the indenting suggested that the other order was intended -
	this is worth checking

	* V28

	* the ai was looping forever in RDafford because roll was
	negative due to Manned Safety being more than MaxRD.  the
	dos game survived this because roll was a 16 bit number,
	so it didn't take to long to count it down until it wrapped
	to 0.  but it was never going to finish with a 32 bit roll value

	for now, delcare roll as 

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-01-02  Michael McCarty <mkmccarty@gmail.com>
+	
+	* V39
+
+	* fixed some unitialized values
+
+	* replaced calls to kill() with remove_savedat()
+
 2007-01-02  Pace Willisson  <pace@rhino.pacew.com>
 
 	* V38
