--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-03  Michael McCarty <mkmccarty@gmail.com>
 
+	* V42
+
+	* Renamed UpdatePort to UpdatePortOverlays to avoid a Macintosh name conflict
+
+2007-01-03  Michael McCarty <mkmccarty@gmail.com>
+
 	* V41
 
 	* Encapsulated the creation of ENDGAME.TMP into a single function.
