--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-06  Pace Willisson  <pace@rhino.pacew.com>
+
+	* V50
+	
+	* handle the situation where the video runs out before the
+	audio a little better
+
 2007-01-03  Michael McCarty <mkmccarty@gmail.com>
 
 	* V49
