--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-06  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V51
+
+	* put some av_block() calls in to keep it from wasting the
+	cpu when waiting for keyboard input; don't wave flag over
+	text on admin screen
+
 	* V50
 	
 	* handle the situation where the video runs out before the
