--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-07  Pace Willisson  <pace@rhino.pacew.com>
+
+	* V54
+	
+	* basic support for cross compiling for windows; use autoconf
+	
+
 2007-01-06  Pace Willisson  <pace@rhino.pacew.com>
 
 	* V53
