--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-07  Pace Willisson  <pace@rhino.pacew.com>
 
+	* V55
+	
+	* don't exit on CDAccess calls
+
 	* V54
 	
 	* basic support for cross compiling for windows; use autoconf
