2007-01-08  Michael McCarty <mkmccarty@gmail.com>
	* V62

	* Made earlier changes unbreak the linux compile.  I should really start checking
	this before I check things in.

2007-01-08  Michael McCarty <mkmccarty@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-01-08  Michael McCarty <mkmccarty@gmail.com>
 
+	* V62
+
+	* Made earlier changes unbreak the linux compile.  I should really start checking
+	this before I check things in.
+		
+2007-01-08  Michael McCarty <mkmccarty@gmail.com>
+
 	* V61
 
 	* Removed all MouseOn() and MouseOff() calls
